--- a/.env
+++ b/.env
@@ -5,9 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # database url for docker local
-DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
+# DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
 
 # database url on server
 # DATABASE_URL="postgres://paradise_resort_user:ZqljIeoBTCkM1KR8onYKrMlkeqQbjmiR@dpg-cp43kn21hbls73erd62g-a.oregon-postgres.render.com/paradise_resort"
+
+DATABASE_URL="postgresql://group7:abc-123456@paradise-resort-database.postgres.database.azure.com:5432/postgres?schema=public"
 
 JWT_SECRET='super-secret'
