--- a/.env
+++ b/.env
@@ -9,7 +9,4 @@
 
 # database url on server
 # DATABASE_URL="postgres://paradise_resort_user:ZqljIeoBTCkM1KR8onYKrMlkeqQbjmiR@dpg-cp43kn21hbls73erd62g-a.oregon-postgres.render.com/paradise_resort"
-
-DATABASE_URL="postgresql://group7:abc-123456@paradise-resort-database.postgres.database.azure.com:5432/postgres"
-
-JWT_SECRET='super-secret'
+# JWT_SECRET='super-secret'
