--- a/.github/workflows/main_paradise-resort.yml
+++ b/.github/workflows/main_paradise-resort.yml
@@ -23,9 +23,10 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
           npm install
           npm run build --if-present
-          npm run test --if-present
+          npx prisma migrate deploy
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
